[package]
name = "tcp-server"
version = "0.2.2"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "Convenient server-side TCP service. Based on tcp-handler."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/tcp-server"
documentation = "https://docs.rs/tcp-server/"
categories = ["network-programming"]
keywords = ["tcp", "network", "server"]

[dependencies]
log = "~0.4"
anyhow = "^1"
async-trait = "~0.1"
lazy_static = "^1"
thiserror = "^2"
tokio = { version = "^1", features = ["macros", "net", "signal", "time"] }
tokio-util = { version = "~0.7", features = ["rt"] }
tcp-handler = "~1.0"
serde = { version = "^1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "tcp-handler/serde"]

[dev-dependencies]
env_logger = "~0.11"
tokio = { version = "^1", features = ["rt-multi-thread"]}
tcp-client = "~0.2"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
